libs/slim/test/typecheck/fail/argument_type.shader
shader vertex {
    ivec3(1, 2, true);
    return vec4(0.0, 0.0, 0.0, 1.0);
}
